WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146194
ASSERTION FAILED: typesettingFeatures & (Kerning | Ligatures) in WebCore::applyFontTransforms
https://bugs.webkit.org/show_bug.cgi?id=146194
Summary
ASSERTION FAILED: typesettingFeatures & (Kerning | Ligatures) in WebCore::app...
Michael Catanzaro
Reported
2015-06-21 08:45:26 PDT
Created
attachment 255326
[details]
backtrace ASSERTION FAILED: typesettingFeatures & (Kerning | Ligatures) In WebCore::applyFontTransforms, at ../../Source/WebCore/platform/graphics/WidthIterator.cpp:102, loading www.vox.com on a debug build of master, GTK port. Seems to happen 100%. Backtrace attached.
Attachments
backtrace
(264.94 KB, text/plain)
2015-06-21 08:45 PDT
,
Michael Catanzaro
no flags
Details
Patch
(7.50 KB, patch)
2015-09-09 13:49 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(9.50 KB, patch)
2015-09-09 14:40 PDT
,
Myles C. Maxfield
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2015-09-04 10:29:25 PDT
This also happens on
https://www.scaleway.com/pricing/
(Uploaded copy of the site, just in case it changes to
http://people.igalia.com/clopez/wkbug/146194/
)
Myles C. Maxfield
Comment 2
2015-09-09 13:23:27 PDT
Unfortunately
http://people.igalia.com/clopez/wkbug/146194/
doesn't cause an assert in a debug build on Yosemite as of
r189543
:(
Myles C. Maxfield
Comment 3
2015-09-09 13:25:08 PDT
I'm also not getting an assert on
http://www.vox.com/
:(
Myles C. Maxfield
Comment 4
2015-09-09 13:32:55 PDT
From inspection, it must be that the following is true glyphBuffer && glyphBuffer->size() == lastGlyphCount + 1 && isSoftBankEmoji(previousCharacter) but there are no m_typesettingFeatures.
Myles C. Maxfield
Comment 5
2015-09-09 13:33:42 PDT
This is a case where the assert is wrong.
Myles C. Maxfield
Comment 6
2015-09-09 13:49:34 PDT
Created
attachment 260871
[details]
Patch
Myles C. Maxfield
Comment 7
2015-09-09 14:05:32 PDT
Comment on
attachment 260871
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=260871&action=review
> Source/WebCore/ChangeLog:10 > + No new tests because there is no behavior change.
This isn't quite true. I should still create a test.
Myles C. Maxfield
Comment 8
2015-09-09 14:40:44 PDT
Created
attachment 260874
[details]
Patch
Dean Jackson
Comment 9
2015-09-09 14:46:55 PDT
Comment on
attachment 260874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=260874&action=review
> Source/WebCore/platform/graphics/WidthIterator.cpp:105 > + if (glyphBuffer && glyphBuffer->size() == lastGlyphCount + 1 && isSoftBankEmoji(previousCharacter))
Could you put () around lastGlyphCount + 1?
Myles C. Maxfield
Comment 10
2015-09-09 15:42:59 PDT
Committed
r189557
: <
http://trac.webkit.org/changeset/189557
>
Carlos Garcia Campos
Comment 11
2015-10-29 02:09:16 PDT
***
Bug 150638
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug