ASSERTION FAILED: typesettingFeatures & (Kerning | Ligatures) in WebCore::applyFontTransforms https://bugs.webkit.org/show_bug.cgi?id=146194

Reviewed by Dean Jackson.

Source/WebCore:

We might trigger shaping even if the author hasn't specified kerning or ligatures.

Test: fast/text/softbank-emoji-no-ligatures-nor-kerning.html

* platform/graphics/WidthIterator.cpp:
(WebCore::isSoftBankEmoji):
(WebCore::WidthIterator::applyFontTransforms):
(WebCore::WidthIterator::advanceInternal):
(WebCore::applyFontTransforms): Deleted.
* platform/graphics/WidthIterator.h:

LayoutTests:

* fast/text/softbank-emoji-no-ligatures-nor-kerning-expected.html: Added
* fast/text/softbank-emoji-no-ligatures-nor-kerning.html: Added

Canonical link: https://commits.webkit.org/167110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189557 268f45cc-cd09-0410-ab3c-d52691b4dbfc